cours tp liste course

--- a/tp-ListeCourse/index.html
+++ b/tp-ListeCourse/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
- <div id="HEAD"></div>
+    <div id="HEAD"></div>
     <script src="index.js"></script>
 </body>
 
@@ -20,6 +20,8 @@
     </form>
 </div>
 
-<div id="resultat"></div>
+<table class="resultat">
+    <tbody></tbody>
+</table>
 
 </html>
