cours tp liste course

--- a/tp-ListeCourse/index.html
+++ b/tp-ListeCourse/index.html
@@ -10,18 +10,19 @@
 
 <body>
     <div id="HEAD"></div>
-    <script src="index.js"></script>
-</body>
+
 
 <div class="bagarre">
     <form class="row">
-        <input type="text" class="col-10" placeholder="Met ce que tu veux comme course" id="texteuh" />
-        <button class="row btn btn-danger col" id="recuperation">intégrer</button>
+        <input type="text" class="col-10" placeholder="Met ce que tu veux comme course" id="texte" />
+        <button class="row btn btn-danger col"  id="recuperation">intégrer</button>
     </form>
 </div>
 
 <table class="resultat">
-    <tbody></tbody>
+    <tbody>
+    </tbody>
 </table>
-
+<script src="index.js"></script>
+</body>
 </html>
