--- a/cours/Promesse/index.html
+++ b/cours/Promesse/index.html
@@ -8,6 +8,6 @@
 <body>
     
 <div id="result"></div>
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
 </body>
 </html>
