ajout tp-pokemon

--- a/tp-pokemon/index.html
+++ b/tp-pokemon/index.html
@@ -5,26 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="text-center">
         <table>
             <tr>
-                <td><img id="poke"></img></td>
+                <td><img class="rounded-circle border border-5" id="poke"></img></td>
             </tr>
             <tr>
-                <td id="heigh">fefz</td>
+                <td class="bg-dark text-light" id="name-pokemon"></td>
             </tr>
             <tr>
-                <td id="weigh">fefz</td>
+                <td class="bg-dark text-light" id="heigh"></td>
             </tr>
             <tr>
-                <td><button id="change" class="btn button-danger"> Changer</button></td>
+                <td class="bg-dark text-light" id="weigh"></td>
             </tr>
             <tr>
-                
-            <script src="index.js"></script>
+                <td><button id="change" class="btn btn-danger"> Changer</button></td>
+            </tr>
+            <tr>
+
+                <script src="index.js"></script>
         </table>
     </div>
 </body>
